<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".activities.SignUp_Page">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="46dp"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/roboto"
                android:text="Sign Up"
                android:textColor="@color/black"
                android:textSize="36sp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="14dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:minHeight="70dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:counterMaxLength="20"
                app:startIconDrawable="@drawable/user">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputName"
                    android:inputType="textPersonName"
                    android:maxHeight="70dp"
                    android:minHeight="60dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:minHeight="70dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:counterMaxLength="20"
                app:startIconDrawable="@drawable/email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputEmail"
                    android:inputType="textEmailAddress"
                    android:maxHeight="70dp"
                    android:minHeight="60dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPhoneTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:minHeight="70dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:counterMaxLength="20"
                app:startIconDrawable="@drawable/phone">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/inputPhone"
                    android:inputType="textEmailAddress"
                    android:maxHeight="70dp"
                    android:minHeight="60dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:minHeight="70dp"
                app:boxBackgroundColor="@color/white"
                app:boxCornerRadiusBottomEnd="5dp"
                app:boxCornerRadiusBottomStart="5dp"
                app:boxCornerRadiusTopEnd="5dp"
                app:boxCornerRadiusTopStart="5dp"
                app:counterMaxLength="20"
                app:passwordToggleEnabled="true"
                app:startIconDrawable="@drawable/password">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:hint="@string/inputPassword"
                    android:inputType="textPassword"
                    android:maxHeight="70dp"
                    android:minHeight="60dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
                    android:textSize="18sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/signupBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="40dp"
                android:background="@drawable/button"
                android:contentDescription="Sign up"
                android:text="Sign Up"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="160dp"
                android:layout_height="20dp"
                android:layout_gravity="center"
                android:layout_marginTop="16dp"
                app:srcCompat="@drawable/divider" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="24dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/googleBtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginEnd="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/google"
                    app:riv_oval="true" />

                <com.makeramen.roundedimageview.RoundedImageView
                    android:id="@+id/facebookBtn"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_gravity="right"
                    android:layout_marginStart="20dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/facebook"
                    app:riv_oval="true" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/alreadyAccount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="Already Have An Account?"
                    android:textSize="20dp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gotoSignin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="10dp"
                    android:gravity="center"
                    android:text="Sign In"
                    android:textColor="@android:color/holo_blue_dark"
                    android:textSize="20dp"
                    android:textStyle="bold" />
            </LinearLayout>

            <ImageView
                android:id="@+id/illustration1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@drawable/illustration" />

        </LinearLayout>
</LinearLayout>