<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ProfileEdit">

    <RelativeLayout
        android:id="@+id/rel1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@android:color/white"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerInParent="true"
            android:layout_marginStart="10dp"
            android:background="@color/white"
            android:clickable="true"
            android:src="@drawable/back2"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:ellipsize="end"
            android:fontFamily="@font/roboto"
            android:gravity="center"
            android:maxLines="1"
            android:padding="5dp"
            android:text="Edit Profile"
            android:textColor="#000"
            android:textSize="28sp"
            android:textStyle="bold" />

    </RelativeLayout>

    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rel1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="16dp"
                app:cardElevation="10dp"
                app:layout_constraintTop_toBottomOf="@id/rel1">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:id="@+id/infoLabel"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="10dp"
                            android:text="Edit Profile"
                            android:textSize="20sp" />

                        <View
                            android:id="@+id/divider"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"
                            android:layout_gravity="bottom"
                            android:background="?android:attr/listDivider" />

                    </androidx.cardview.widget.CardView>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etUserName"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:minHeight="70dp"
                        app:boxBackgroundColor="@color/white"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:counterMaxLength="20"
                        app:startIconDrawable="@drawable/user">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/userName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/inputName"
                            android:inputType="textPersonName"
                            android:maxHeight="80dp"
                            android:minHeight="70dp"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:minHeight="70dp"
                        app:boxBackgroundColor="@color/white"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:counterMaxLength="20"
                        app:startIconDrawable="@drawable/email">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/email"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/inputEmail"
                            android:inputType="textEmailAddress"
                            android:maxHeight="80dp"
                            android:minHeight="70dp"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/etaddress"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:minHeight="70dp"
                        app:boxBackgroundColor="@color/white"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:counterMaxLength="20"
                        app:startIconDrawable="@drawable/address">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/address"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/inputAddress"
                            android:inputType="textMultiLine"
                            android:maxHeight="80dp"
                            android:minHeight="70dp"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/etCity"
                            android:layout_width="160dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:minHeight="70dp"
                            app:boxBackgroundColor="@color/white"
                            app:boxBackgroundMode="outline"
                            app:boxCornerRadiusBottomEnd="5dp"
                            app:boxCornerRadiusBottomStart="5dp"
                            app:boxCornerRadiusTopEnd="5dp"
                            app:boxCornerRadiusTopStart="5dp"
                            app:counterMaxLength="20"
                            app:startIconDrawable="@drawable/address2">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/city"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="City"
                                android:inputType="phone"
                                android:maxHeight="80dp"
                                android:minHeight="70dp"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>

                        <com.google.android.material.textfield.TextInputLayout
                            android:id="@+id/etCountry"
                            android:layout_width="170dp"
                            android:layout_height="100dp"
                            android:layout_marginStart="16dp"
                            android:layout_marginEnd="16dp"
                            android:minHeight="70dp"
                            app:boxBackgroundColor="@color/white"
                            app:boxBackgroundMode="outline"
                            app:boxCornerRadiusBottomEnd="5dp"
                            app:boxCornerRadiusBottomStart="5dp"
                            app:boxCornerRadiusTopEnd="5dp"
                            app:boxCornerRadiusTopStart="5dp"
                            app:counterMaxLength="20"
                            app:startIconDrawable="@drawable/globe">

                            <com.google.android.material.textfield.TextInputEditText
                                android:id="@+id/country"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:hint="Country"
                                android:inputType="textMultiLine"
                                android:maxHeight="80dp"
                                android:minHeight="70dp"
                                android:textSize="18sp" />
                        </com.google.android.material.textfield.TextInputLayout>
                    </LinearLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/erPhone"
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="16dp"
                        android:minHeight="70dp"
                        app:boxBackgroundColor="@color/white"
                        app:boxBackgroundMode="outline"
                        app:boxCornerRadiusBottomEnd="5dp"
                        app:boxCornerRadiusBottomStart="5dp"
                        app:boxCornerRadiusTopEnd="5dp"
                        app:boxCornerRadiusTopStart="5dp"
                        app:counterMaxLength="20"
                        app:startIconDrawable="@drawable/phone">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/phoneNo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/inputPhone"
                            android:inputType="phone"
                            android:maxHeight="80dp"
                            android:minHeight="70dp"
                            android:textSize="18sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/cancel"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/cancel"
                    android:text="Cancel"
                    android:textColor="@color/orange"
                    android:textSize="16sp"
                    app:iconGravity="end"
                    tools:ignore="TextContrastCheck" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/saveBtn"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:layout_marginStart="16dp"
                    android:background="@drawable/addtocart"
                    android:text="Save"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:icon="@drawable/save2"
                    app:iconGravity="end"
                    app:layout_constraintBaseline_toBaselineOf="@+id/cancel"
                    tools:ignore="TextContrastCheck" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>